# tutorsim

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  config.yaml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml  pr_checks.yml
analysis/: __init__.py  moment_facets.ipynb  split_ground_truth.py  stats.ipynb  taxonomy.py
analysis/working-paper-20260630/: action_taxonomy_distribution.csv  benchmark_perf_cost.py  data_stats_table.ipynb  data_stats_table.tex  figure_action_distribution.ipynb  figure_dumbbell_grid.ipynb  kl_divergence_table.ipynb  kl_divergence_table.tex  v1_action_taxonomy_distribution.csv
annotator/: __init__.py  __main__.py  run.py
annotator/core/: README.md  __init__.py  annotate.py  client.py  config.py  decompose.py  detect.py  embed.py  label.py  screenshots.py  situate.py  storage.py  structure.py  utils.py
annotator/eval/: __init__.py  eval.py  view.py
annotator/iteration/: ITERATION_INSTRUCTIONS.md  __init__.py  advisor.py  classify_annotators.py  generate_style_prompts.py  structure_disagreements.py
benchmark/: run.py
benchmark/core/: aggregate.py  annotator_bridge.py  exchange.py  model_configs.py  scenarios.py  score.py  students.py  traits.py  tutors.py
benchmark/eval/: eval.py  leaderboard.py  view.py  view_replay.py
benchmark/synth_students/: _adapter.py  dimension.py  prompts.py  traits.py
common/: __init__.py  logging_setup.py
configs/: llm_pricing.json  local.example.yaml  visual_selection_fixed10.txt
data/: README.md  build_consolidated.py  build_ground_truth.py  extract_ground_truth.py  migrate_action_direction_unknown.py  process_new_conversations.py  refresh_ground_truth.py  sort_ground_truth.py  split.json  split_ground_truth.py  stats.ipynb  temp_decompose.py
docs/: follow_up_tasks.md  lessons_learned.md  profile_detection_iteration.md  screenshot_enrichment_smoke.md  status.md  tasks.md
docs/plans/: 2026-03-26-factor-iv-storage-refactor.md  2026-04-17-codebase-cleanup.md  2026-04-17-labeller-v2.md  2026-04-24-screenshot-enrichment.md  2026-04-28-benchmark-production-readiness.md  2026-04-28-benchmark-screenshots.md  2026-05-20-labeller-validation.md  2026-05-22-labeller-headroom.md  2026-06-08-dynamic-exchange-length.md  2026-06-08-human-key-moments-benchmark.md  2026-06-09-modal-cut-selection.md  2026-06-09-next-problem-multi-moment-exchange.md  2026-06-09-trait-generated-student.md  2026-06-10-annotator-pipeline-migration.md  2026-06-10-oracle-tutor-mode.md  2026-06-10-prompt-caching-exchange.md  _summary.md
docs/source/: conf.py  index.md  installation.md  video_transcript_toolkit_quickstart.md
plans/: _summary.md
prompts/annotator/: advisor_annotation_excerpt.md  advisor_detection.md  advisor_drafting_annotation.md  advisor_drafting_detection.md
prompts/archive/: SUMMARY.md  annotator_profiles_SUMMARY.md
scripts/: annotate.py  evaluate.py  generate_sample_transcripts.py  leaderboard.py  recompute_scores.py  rescore_smoke.py  rescore_v10.py  run_demo.py  score_human_baseline.py  varied_smoke.py  view_transcript.py
scripts/data/: run_transcript_understanding_benchmark.py  select_transcript_moments.py
src/tutorsim/: __init__.py  cli.py  client.py  config.py  conversation.py  default_config.yaml  logging_setup.py  moments.py  report.py  resources.py  results.py  scenarios.py  scoring.py  student.py  taxonomy.py  tutor.py
tests/: conftest.py  test_annotate_build.py  test_annotate_gold_keys.py  test_benchmark_exchange_dynamic.py  test_benchmark_human_scenarios.py  test_benchmark_oracle_tutor.py  test_benchmark_phase2_migration.py  test_benchmark_resume.py  test_benchmark_screenshots.py  test_benchmark_student_modes.py  test_benchmark_traits.py  test_client.py  test_client_caching.py  test_config.py  test_decompose_only_overscaffold.py  test_decompose_overscaffold.py  test_decompose_parse.py  test_detect_parse.py  test_embed_filename.py  test_embed_ground_truth_keys.py  test_eval_metrics.py  test_eval_overscaffold_f1.py  test_grade_school_fixtures.py  test_ground_truth_agg.py  test_ground_truth_decomp.py  test_ground_truth_overscaffold.py  test_ground_truth_scaffolding_only.py  test_label_noop.py  test_label_routing.py  test_logging_setup.py  test_migrate_action_direction_unknown.py  test_overscaffold_eval_metrics.py  test_run_cli.py  test_screenshots.py  test_situate_label.py  test_storage.py  test_structure_disagreements.py  test_structure_label.py  test_structure_parsing.py  test_toolkit_llm_and_io.py  (+7 more)
tests/analysis/: test_benchmark_perf_cost.py  test_taxonomy.py
tests/benchmark/: test_build_scenarios.py  test_cli.py  test_client.py  test_config.py  (+9 more)
tutor_bench/: __init__.py  annotator.py  cli.py  evaluator.py  version.py
tutorsim_build/: __init__.py  balanced_520_ids.json  classify.py  cli.py  groundtruth.py  moments_build.py  publish_ground_truth_s3.py  resources.py  traits.py
validation/: 1_detection_validation.html  1_detection_validation.ipynb  2_annotation_validation.html  2_annotation_validation.ipynb  3_labeller_validation.py  4_run_labeller_eval.py  5_inspect_misclassifications.py  6_generate_labeller_prompt.py  7_generate_labeller_prompt_minimal.py  8_error_analysis.py  README.md  _generate_notebooks.py  generate_report.py  lm_validation.ipynb  overscaffold_validation.py  situate_validation.py  teacher_action_results.ipynb  teacher_profiles_iaa.ipynb  validation_report.md
(+215 files in other folders)
