[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tutorsim"
version = "0.1.0"
description = "A benchmark for measuring how well language models tutor."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "The Allen Institute for Artificial Intelligence" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic",
    "openai",
    "google-genai",
    "pyyaml",
    "python-dotenv",
    "datasets",
]

[project.optional-dependencies]
# maintainer-only dataset construction / release tooling
build = ["boto3", "jsonschema"]
# analysis / figures layer: pandas for taxonomy headline tables, matplotlib/seaborn
# for the notebooks + benchmark_perf_cost.py (was misnamed "taxonomy")
analysis = ["pandas", "matplotlib", "seaborn"]
# dev alone runs the runtime tests; add build-dev (+analysis) for the full suite
dev = ["pytest"]
build-dev = ["tutorsim[build]", "moto[s3]"]

[project.scripts]
tutorsim = "tutorsim.cli:main"
tutorsim-build = "tutorsim_build.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["tutorsim*", "tutorsim_build*", "analysis*"]

[tool.setuptools.package-data]
tutorsim = [
    "default_config.yaml",
    "prompts/tutor/*.txt",
    "prompts/student/*.txt",
    "prompts/scorer/annotate/*.md",
    "prompts/scorer/decompose/*.md",
    "prompts/scorer/structure/*.md",
    "prompts/taxonomy/*.md",
]
tutorsim_build = [
    "moments.schema.json",
    "prompts/classify/labeller/*.txt",
    "prompts/classify/situation_labeller/*.md",
    "prompts/trait_generator/*.txt",
    "prompts/trait_generator/dimensions/*.txt",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
